--- a/AngularFrontEnd/projects/features/src/app/admin-product/admin-product.component.html
+++ b/AngularFrontEnd/projects/features/src/app/admin-product/admin-product.component.html
@@ -40,7 +40,7 @@
                             </span>  
                             <span *ngSwitchCase="'money'" pTooltip="{{rowData[col.field] | number}}" tooltipPosition="bottom">{{ rowData[col.field] | number }}</span> 
                             <span *ngSwitchCase="'percent'" pTooltip="{{rowData[col.field]}}%" tooltipPosition="bottom">{{ rowData[col.field] }}%</span> 
-                            <span *ngSwitchCase="'date'" pTooltip="{{rowData[col.field] | date: 'dd MMM yyyy'}}" tooltipPosition="bottom">{{ rowData[col.field] | date: 'dd MMM yyyy' }}</span> 
+                            <span *ngSwitchCase="'date'" pTooltip="{{rowData[col.field] | date: 'hh:mm:ss a, dd/MM/yyyy'}}" tooltipPosition="bottom">{{ rowData[col.field] | date: 'hh:mm:ss a, dd/MM/yyyy' }}</span> 
                             <span *ngSwitchDefault pTooltip="{{rowData[col.field]}}" tooltipPosition="bottom">{{ rowData[col.field] }}</span> 
                         </span>                   
                         </td>
