--- a/AngularFrontEnd/projects/features/src/app/home-page/home-page.component.html
+++ b/AngularFrontEnd/projects/features/src/app/home-page/home-page.component.html
@@ -50,41 +50,41 @@
 
 <app-footer/>
 
-<p-dialog [(visible)]="displayDetailPopup" [style]="{ width: '700px' }" header="Product Detail" [modal]="true" styleClass="p-fluid">
+<p-dialog [(visible)]="displayDetailPopup" [style]="{ width: '700px' }" header="Chi tiết sản phẩm" [modal]="true" styleClass="p-fluid">
   <ng-template pTemplate="content">
       <img [src]="createImgPath(currentProduct.image)" alt="product picture" style="max-height: 400px; max-width: 400px; height: auto; width: auto;" class="center detail-image" />
       <br />
       <table>
           <tr>
               <td class="padding-table">
-                  <h4>Product Name: <b>{{ currentProduct.productName }}</b></h4>
+                  <h4>Sản phẩm: <b>{{ currentProduct.productName }}</b></h4>
               </td>
               <td>
-                  <h4>Brand: <b>{{ currentProduct.brand.brandName }}</b></h4>
+                  <h4>Nhãn hiệu: <b>{{ currentProduct.brand.brandName }}</b></h4>
               </td>
           </tr>
           <tr>
               <td class="padding-table">
-                  <h4>Category: <b>{{ currentProduct.category.categoryName }}</b></h4>
+                  <h4>Danh mục: <b>{{ currentProduct.category.categoryName }}</b></h4>
               </td>
               <td>
-                  <h4>Discount: <b>{{ currentProduct.discount }}%</b></h4>                 
+                  <h4>Giảm giá: <b>{{ currentProduct.discount }}%</b></h4>                 
               </td>
           </tr>
           <tr>
               <td class="padding-table">                 
-                  <h4>Original Price: <b>{{ currentProduct.price | currency : "VND"}}</b></h4> 
+                  <h4>Giá gốc: <b>{{ currentProduct.price | currency : "VND"}}</b></h4> 
               </td>
               <td>
-                  <h4>Price: <b>{{ currentProduct.price - (currentProduct.price * currentProduct.discount) / 100 | currency : "VND" }}</b></h4>
+                  <h4>Giá sau khuyến mãi: <b>{{ currentProduct.price - (currentProduct.price * currentProduct.discount) / 100 | currency : "VND" }}</b></h4>
               </td>
           </tr>
           <tr>
             <td class="padding-table">                 
-                <h4>Available: <b>{{ currentProduct.quanity }}</b></h4> 
+                <h4>Có sẵn: <b>{{ currentProduct.quanity }}</b></h4> 
             </td>
             <td>
-                <h4>Sold: <b>{{ currentProduct.soldQuantity }}</b></h4>
+                <h4>Đã bán: <b>{{ currentProduct.soldQuantity }}</b></h4>
             </td>
           </tr>        
           <tr>
@@ -93,7 +93,7 @@
               </td>
               <td>
                   <h4>
-                      Quantity:
+                      Số lượng:
                       <p-inputNumber
                           [(ngModel)]="quantityAddToCart"
                           [showButtons]="true"
@@ -116,7 +116,7 @@
       </table>
   </ng-template>
   <ng-template pTemplate="footer">
-      <button pButton pRipple label="Add to cart" icon="pi pi-cart-plus" class="p-button-danger" [disabled]="!userData.isLoggedIn" (click)="addToCart(currentProduct)"></button>
+      <button pButton pRipple label="Thêm vào giỏ hàng" icon="pi pi-cart-plus" class="p-button-danger" [disabled]="!userData.isLoggedIn" (click)="addToCart(currentProduct)"></button>
       <button pButton pRipple label="Huỷ" icon="pi pi-times" class="p-button-secondary" (click)="hideDetailPopup()"></button>
   </ng-template>
 </p-dialog>
